# bank_customer

./: LICENSE  pyproject.toml
notebooks/: baseline-rag.ipynb
src/: chunking.py  loading.py
