[tool.poetry]
name = "bank-customer"
version = "0.1.0"
description = ""
authors = ["tounsi <tounsiayet17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.45.2"
langchain-community = "^0.3.2"
huggingface-hub = "^0.25.2"
langchain-huggingface = "^0.1.0"
sentence-transformers = "^3.2.0"
pypdf = "^5.0.1"
chromadb = "^0.5.13"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
